Compile glad for 32bit x86

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,6 @@ set(GLFW_BUILD_X11 TRUE)
 add_subdirectory(glfw)
 if (NOT ${IS_ARM_BUILD})
 set_target_properties(glfw PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+set_target_properties(glad PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 endif()
 add_subdirectory(ninecraft)
