--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "glad"]
 	path = glad
 	url = https://github.com/Dav1dde/glad.git
+[submodule "libhybris"]
+	path = libhybris
+	url = https://github.com/minecraft-linux/libhybris
