Added new background and added OpenGL 1.0-3.0 compatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(mcpereborn)
+project(ninecraft)
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "(arm)|(armhf)|(aarch64)|(arm64)")
     set(IS_ARM_BUILD TRUE)
@@ -8,12 +8,19 @@ else()
     set(IS_ARM_BUILD FALSE)
 endif()
 
+set(GLFW_BUILD_X11 TRUE)
+
 add_subdirectory(libhybris)
 add_subdirectory(glad)
-set(GLFW_BUILD_X11 TRUE)
 add_subdirectory(glfw)
+add_subdirectory(ninecraft)
+
+include_directories(${PROJECT_SOURCE_DIR}/libhybris/include)
+include_directories(${GLAD_INCLUDE_DIRS})
+include_directories(${GLFW_SOURCE_DIR}/include)
+
 if (NOT ${IS_ARM_BUILD})
 set_target_properties(glfw PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 set_target_properties(glad PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
+set_target_properties(hybris PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 endif()
-add_subdirectory(ninecraft)
