replaced GLAD with OpenGL

--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -4,13 +4,14 @@ project(ninecraft-core)
 
 find_package(PNG REQUIRED)
 find_package(OpenAL REQUIRED)
+find_package(OpenGL REQUIRED)
 
 file(GLOB SOURCE_FILES src/*.c)
 
-add_executable(ninecraft ${GLAD_SOURCES} ${SOURCE_FILES})
-target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE)
+add_executable(ninecraft ${SOURCE_FILES})
+target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE GL_GLEXT_PROTOTYPES)
 target_include_directories(ninecraft PUBLIC include/)
-target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris glad ${GLFW3_LIBRARY} ${OPENAL_LIBRARY} ${PNG_LIBRARIES})
+target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris ${OPENGL_LIBRARY} ${GLFW3_LIBRARY} ${OPENAL_LIBRARY} ${PNG_LIBRARIES})
 include_directories(ninecraft PUBLIC include/)
 if (NOT ${IS_ARM_BUILD})
 set_target_properties(ninecraft PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
