added the extra macos libraries in CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ set(GLFW_BUILD_X11 TRUE)
 add_subdirectory(libhybris)
 add_subdirectory(glfw)
 add_subdirectory(ninecraft)
+if(APPLE)
+add_subdirectory(osx-elf-header)
+add_subdirectory(epoll-shim)
+endif()
 
 include_directories(${PROJECT_SOURCE_DIR}/libhybris/include)
 include_directories(${GLFW_SOURCE_DIR}/include)
