--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ project(ninecraft)
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "(arm)|(armhf)|(aarch64)|(arm64)")
     set(IS_ARM_BUILD TRUE)
     set(IS_ARMHF_BUILD TRUE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mthumb")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mthumb")
 else()
     set(IS_ARM_BUILD FALSE)
 endif()
@@ -23,7 +21,10 @@ endif()
 include_directories(${PROJECT_SOURCE_DIR}/libhybris/include)
 include_directories(${GLFW_SOURCE_DIR}/include)
 
-if (NOT ${IS_ARM_BUILD})
+if (${IS_ARM_BUILD})
+set_target_properties(glfw PROPERTIES COMPILE_FLAGS "-mthumb" LINK_FLAGS "-mthumb")
+set_target_properties(hybris PROPERTIES COMPILE_FLAGS "-mthumb" LINK_FLAGS "-mthumb")
+else()
 set_target_properties(glfw PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 set_target_properties(hybris PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
 endif()
