Added modding support

--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -15,6 +15,7 @@ target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE GL_GLEXT_PROTOTYPES)
 target_include_directories(ninecraft PUBLIC include/)
 target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris ${OPENGL_LIBRARY} ${GLFW3_LIBRARY} ${OPENAL_LIBRARY} ${PNG_LIBRARIES})
 include_directories(ninecraft PUBLIC include/)
+set_target_properties(ninecraft PROPERTIES COMPILE_FLAGS "-rdynamic" LINK_FLAGS "-rdynamic")
 if (${IS_ARM_BUILD})
 set_target_properties(ninecraft PROPERTIES COMPILE_FLAGS "-mthumb" LINK_FLAGS "-mthumb")
 else()
