Initial ARM support

--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -10,9 +10,9 @@ find_package(OpenAL REQUIRED)
 file(GLOB_RECURSE SOURCE_FILES src/*.c)
 
 add_executable(ninecraft ${SOURCE_FILES})
-target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE GL_GLEXT_PROTOTYPES)
+target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE)
 target_include_directories(ninecraft PUBLIC include/)
-target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris GLESv2 ${GLFW3_LIBRARY} ${OPENAL_LIBRARY} ${PNG_LIBRARIES})
+target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris GLESv1_CM OpenAL::OpenAL PNG::PNG)
 include_directories(ninecraft PUBLIC include/)
 if (${IS_ARM_BUILD})
 set_target_properties(ninecraft PROPERTIES COMPILE_FLAGS "-mthumb" LINK_FLAGS "-mthumb")
