just a small fix in CMakeLists.txt

--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -12,7 +12,7 @@ file(GLOB_RECURSE SOURCE_FILES src/*.c)
 add_executable(ninecraft ${SOURCE_FILES})
 target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE)
 target_include_directories(ninecraft PUBLIC include/)
-target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris GLESv1_CM PNG::PNG ${OPENAL_LIBRARY})
+target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glfw hybris GLESv1_CM ${PNG_LIBRARIES} ${OPENAL_LIBRARY})
 include_directories(ninecraft PUBLIC include/)
 if (${IS_ARM_BUILD})
 set_target_properties(ninecraft PROPERTIES COMPILE_FLAGS "-mthumb" LINK_FLAGS "-mthumb")
