--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.1)
 project(ninecraft)
 
+#set(CMAKE_CXX_COMPILER "arm-linux-gnueabi-g++")
+#set(CMAKE_C_COMPILER "arm-linux-gnueabi-gcc")
+
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
 
 if(CMAKE_SYSTEM_PROCESSOR MATCHES "(arm)|(armhf)|(aarch64)|(arm64)")
@@ -12,6 +15,9 @@ endif()
 
 set(GLFW_BUILD_X11 TRUE)
 
+include_directories(${GLFW_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/minivorbis)
+
 add_subdirectory(libhybris)
 add_subdirectory(glfw)
 add_subdirectory(ninecraft)
@@ -21,7 +27,6 @@ add_subdirectory(epoll-shim)
 endif()
 
 include_directories(${PROJECT_SOURCE_DIR}/libhybris/include)
-include_directories(${GLFW_SOURCE_DIR}/include)
 
 if (${IS_ARM_BUILD})
 set_target_properties(glfw PROPERTIES COMPILE_FLAGS "-mthumb" LINK_FLAGS "-mthumb")
