Added 0.8.0 support for arm & x86 (a bit broken on x86)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(GLFW_BUILD_X11 TRUE)
 
 include_directories(${GLFW_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/minivorbis)
+include_directories(${PROJECT_SOURCE_DIR}/stb)
 
 add_subdirectory(libhybris)
 add_subdirectory(glfw)
