--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "minivorbis"]
 	path = minivorbis
 	url = https://github.com/edubart/minivorbis
+[submodule "stb"]
+	path = stb
+	url = https://github.com/nothings/stb.git
