removed zlib & libpng

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "stb"]
 	path = stb
 	url = https://github.com/nothings/stb.git
+[submodule "miniz"]
+	path = miniz
+	url = https://github.com/richgel999/miniz.git
