Nicer Mouse Handling (Post v0.6)

--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -6,7 +6,7 @@ set(OpenGL_GL_PREFERENCE GLVND)
 
 find_package(OpenAL REQUIRED)
 
-file(GLOB_RECURSE SOURCE_FILES src/*.c)
+file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c)
 
 add_executable(ninecraft ${SOURCE_FILES})
 target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE)
