Added libm in CMakeLists.txt

--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -11,5 +11,5 @@ file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c)
 add_executable(ninecraft ${SOURCE_FILES})
 target_compile_definitions(ninecraft PRIVATE _GNU_SOURCE)
 target_include_directories(ninecraft PUBLIC include/)
-target_link_libraries(ninecraft ${CMAKE_DL_LIBS} miniz glfw hybris GLESv1_CM ${OPENAL_LIBRARY})
+target_link_libraries(ninecraft ${CMAKE_DL_LIBS} m miniz glfw hybris GLESv1_CM ${OPENAL_LIBRARY})
 include_directories(ninecraft PUBLIC include/)
