some cmake fixes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,15 @@ endif()
 include_directories(${PROJECT_SOURCE_DIR}/minivorbis)
 include_directories(${PROJECT_SOURCE_DIR}/stb)
 
-set(LIBTYPE "STATIC" CACHE BOOL "" FORCE)
-
 add_subdirectory(glad/cmake)
 glad_add_library(glad REPRODUCIBLE LOADER API egl=1.5 gl:compatibility=2.0)
 add_subdirectory(zlib)
 add_subdirectory(ancmp)
 add_subdirectory(glfw)
-add_subdirectory(openal-soft)
+if(WIN32)
+    set(LIBTYPE "STATIC" CACHE BOOL "" FORCE)
+    add_subdirectory(openal-soft)
+endif()
 add_subdirectory(ninecraft)
 
 include_directories(${PROJECT_SOURCE_DIR}/libhybris/include)
