--- a/ninecraft/CMakeLists.txt
+++ b/ninecraft/CMakeLists.txt
@@ -4,7 +4,7 @@ project(ninecraft-core)
 
 file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c)
 
-add_executable(ninecraft ${SOURCE_FILES} ${STB_DIR}/stb_vorbis.c)
+add_executable(ninecraft ${SOURCE_FILES} ../stb/stb_vorbis.c)
 if(WIN32)
     target_compile_definitions(ninecraft PRIVATE AL_LIBTYPE_STATIC)
     target_link_libraries(ninecraft OpenAL::OpenAL)
@@ -14,5 +14,10 @@ else()
     target_link_libraries(ninecraft ${OPENAL_LIBRARY})
 endif()
 target_include_directories(ninecraft PUBLIC include/)
-target_link_libraries(ninecraft ${CMAKE_DL_LIBS} ${zlibstatic} glad glfw ancmp)
+target_link_libraries(ninecraft ${CMAKE_DL_LIBS} glad glfw ancmp)
+if(ZLIB_FOUND)
+target_link_libraries(ninecraft ZLIB::ZLIB)
+else()
+target_link_libraries(ninecraft zlibstatic)
+endif()
 include_directories(ninecraft PUBLIC include/)
