--- a/.github/workflows/auto-update-nix.yml
+++ b/.github/workflows/auto-update-nix.yml
@@ -20,7 +20,7 @@ jobs:
         sudo apt-get install -y nix-bin git
         
     - name: Check for update
-      run: nix flake update
+      run: nix --extra-experimental-features "nix-command flakes" flake update
 
     - name: Check if directory has changed
       id: changes
