--- a/.github/workflows/auto-update-nix.yml
+++ b/.github/workflows/auto-update-nix.yml
@@ -14,10 +14,12 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y nix-bin git
+    - name: Set up Nix
+      uses: cachix/install-nix-action@v27
+      with:
+        nix_path: nixpkgs=channel:nixos-23.11
+        extra_nix_config: |
+          experimental-features = nix-command flakes
         
     - name: Check for update
       run: nix --extra-experimental-features "nix-command flakes" flake update
