ditched GLFW & OpenAL and replaced with SDL2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,17 @@ MESSAGE(STATUS "Including GLAD from external")
 add_subdirectory($ENV{glad}/cmake $ENV{glad})
 else()
 MESSAGE(STATUS "Including GLAD from submodule")
+SET(SDL_STATIC ON CACHE BOOL "Enable SDL_STATIC" FORCE)
+SET(SDL_SHARED OFF CACHE BOOL "Disable SDL_SHARED" FORCE)
+SET(SDL_MMX OFF CACHE BOOL "Disable SDL_MMX" FORCE)
+SET(SDL_SSE OFF CACHE BOOL "Disable SDL_SSE" FORCE)
+SET(SDL_SSE2 OFF CACHE BOOL "Disable SDL_SSE2" FORCE)
+SET(SDL_SSE3 OFF CACHE BOOL "Disable SDL_SSE3" FORCE)
+SET(SDL_SSEMATH OFF CACHE BOOL "Disable SDL_SSEMATH" FORCE)
+SET(SDL_3DNOW OFF CACHE BOOL "Disable SDL_3DNOW" FORCE)
+SET(SDL_TEST OFF CACHE BOOL "Disable SDL_TEST" FORCE)
+SET(SDL_TESTS OFF CACHE BOOL "Disable SDL_TESTS" FORCE)
+
 add_subdirectory(glad/cmake)
 endif()
 glad_add_library(glad REPRODUCIBLE LOADER API egl=1.5 gl:compatibility=2.0)
@@ -42,15 +53,5 @@ MESSAGE(STATUS "Including ANCMP from submodule")
 add_subdirectory(ancmp)
 endif()
 
-# GLFW
-find_package(glfw3)
-if(NOT glfw3_FOUND)
-MESSAGE(STATUS "Including GLFW from submodule")
-add_subdirectory(glfw)
-endif()
-
-if(WIN32)
-    set(LIBTYPE "STATIC" CACHE BOOL "" FORCE)
-    add_subdirectory(openal-soft)
-endif()
+add_subdirectory(SDL)
 add_subdirectory(ninecraft)
