--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,16 +21,6 @@ MESSAGE(STATUS "Including GLAD from external")
 add_subdirectory($ENV{glad}/cmake $ENV{glad})
 else()
 MESSAGE(STATUS "Including GLAD from submodule")
-SET(SDL_STATIC ON CACHE BOOL "Enable SDL_STATIC" FORCE)
-SET(SDL_SHARED OFF CACHE BOOL "Disable SDL_SHARED" FORCE)
-SET(SDL_MMX OFF CACHE BOOL "Disable SDL_MMX" FORCE)
-SET(SDL_SSE OFF CACHE BOOL "Disable SDL_SSE" FORCE)
-SET(SDL_SSE2 OFF CACHE BOOL "Disable SDL_SSE2" FORCE)
-SET(SDL_SSE3 OFF CACHE BOOL "Disable SDL_SSE3" FORCE)
-SET(SDL_SSEMATH OFF CACHE BOOL "Disable SDL_SSEMATH" FORCE)
-SET(SDL_3DNOW OFF CACHE BOOL "Disable SDL_3DNOW" FORCE)
-SET(SDL_TEST OFF CACHE BOOL "Disable SDL_TEST" FORCE)
-SET(SDL_TESTS OFF CACHE BOOL "Disable SDL_TESTS" FORCE)
 
 add_subdirectory(glad/cmake)
 endif()
@@ -53,5 +43,26 @@ MESSAGE(STATUS "Including ANCMP from submodule")
 add_subdirectory(ancmp)
 endif()
 
+# SDL
+SET(SDL_STATIC ON CACHE BOOL "Enable SDL_STATIC" FORCE)
+SET(SDL_SHARED OFF CACHE BOOL "Disable SDL_SHARED" FORCE)
+SET(SDL_MMX OFF CACHE BOOL "Disable SDL_MMX" FORCE)
+SET(SDL_SSE OFF CACHE BOOL "Disable SDL_SSE" FORCE)
+SET(SDL_SSE2 OFF CACHE BOOL "Disable SDL_SSE2" FORCE)
+SET(SDL_SSE3 OFF CACHE BOOL "Disable SDL_SSE3" FORCE)
+SET(SDL_SSEMATH OFF CACHE BOOL "Disable SDL_SSEMATH" FORCE)
+SET(SDL_3DNOW OFF CACHE BOOL "Disable SDL_3DNOW" FORCE)
+SET(SDL_TEST OFF CACHE BOOL "Disable SDL_TEST" FORCE)
+SET(SDL_TESTS OFF CACHE BOOL "Disable SDL_TESTS" FORCE)
+
+# add_subdirectory(SDL)
+find_package(SDL2)
+if(NOT SDL2_FOUND)
+MESSAGE(STATUS "Including SDL2 from submodule")
 add_subdirectory(SDL)
+endif()
+
+
+
+
 add_subdirectory(ninecraft)
