--- a/.github/workflows/ninecraft-windows-build.yml
+++ b/.github/workflows/ninecraft-windows-build.yml
@@ -22,6 +22,9 @@ jobs:
     - name: Gather git submodules
       run: git submodule update --init
 
+    - name: Install jinja2
+      run: pip install jinja2
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
