--- a/.github/workflows/ninecraft-windows-build.yml
+++ b/.github/workflows/ninecraft-windows-build.yml
@@ -19,11 +19,18 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Install Python dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install jinja2
+
     - name: Gather git submodules
       run: git submodule update --init
-
-    - name: Install jinja2
-      run: pip install jinja2
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -32,7 +39,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration
-      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -DPYTHON_EXECUTABLE=${{env.pythonLocation}}/python.exe
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
