--- a/.github/workflows/ninecraft-arm-linux-build.yml
+++ b/.github/workflows/ninecraft-arm-linux-build.yml
@@ -23,9 +23,9 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        sudo dpkg --add-architecture armhf
-        sudo apt update
-        sudo apt install git make cmake unzip python3-jinja2 zenity gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libopenal-dev:armhf libx11-dev:armhf libxrandr-dev:armhf libxinerama-dev:armhf libxcursor-dev:armhf libxi-dev:armhf libgl-dev:armhf libwayland-dev:armhf libpulse-dev:armhf libxkbcommon-dev:armhf libegl-dev:armhf
+        dpkg --add-architecture armhf
+        apt update
+        apt install git make cmake unzip python3-jinja2 zenity gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf libopenal-dev:armhf libx11-dev:armhf libxrandr-dev:armhf libxinerama-dev:armhf libxcursor-dev:armhf libxi-dev:armhf libgl-dev:armhf libwayland-dev:armhf libpulse-dev:armhf libxkbcommon-dev:armhf libegl-dev:armhf
 
     - name: Gather Submodules
       run: git submodule update --init
