--- a/.github/workflows/ninecraft-x86-linux-build.yml
+++ b/.github/workflows/ninecraft-x86-linux-build.yml
@@ -36,3 +36,25 @@ jobs:
       with:
         name: ninecraft
         path: build-i686/ninecraft/ninecraft
+
+    - name: Build Deb
+      run: |
+        mkdir -p pkgs/ninecraft/usr/bin
+        cp build-i686/ninecraft/ninecraft pkgs/ninecraft/usr/bin
+        cp tools/extract.sh pkgs/ninecraft/usr/bin/ninecraft-extract
+        dpkg-deb -b pkgs/ninecraft
+
+    - name: Upload Deb
+      uses: actions/upload-artifact@v4
+      with:
+        name: ninecraft
+        path: pkgs/ninecraft.deb
+
+    - name: Build Appimage
+      run: |
+          mkdir -p pkgs/Ninecraft.AppDir/usr/bin
+          cp build-i686/ninecraft/ninecraft pkgs/Ninecraft.AppDir/usr/bin
+    - name: "Create AppImage"
+      uses: AppImageCrafters/build-appimage@master
+      with:
+        recipe: "./pkgs/Ninecraft.AppDir"
