--- a/.github/workflows/ninecraft-x86-linux-build.yml
+++ b/.github/workflows/ninecraft-x86-linux-build.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Upload Deb
       uses: actions/upload-artifact@v4
       with:
-        name: ninecraft
+        name: ninecraft.deb
         path: pkgs/ninecraft.deb
 
     - name: Build Appimage
