--- a/.github/workflows/ninecraft-x86-linux-build.yml
+++ b/.github/workflows/ninecraft-x86-linux-build.yml
@@ -18,7 +18,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-      submodules: true
+      with:
+       submodules: true
 
     - name: Install Dependencies
       run: |
