specify recipie file

--- a/.github/workflows/ninecraft-x86-linux-build.yml
+++ b/.github/workflows/ninecraft-x86-linux-build.yml
@@ -60,4 +60,4 @@ jobs:
     - name: "Create AppImage"
       uses: AppImageCrafters/build-appimage@master
       with:
-        recipe: "./pkgs/Ninecraft.AppDir"
+        recipe: "./pkgs/Ninecraft.AppDir/appimage.yml"
