--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,8 @@
 name: Ninecraft build
 
 on:
-  workflow_dispatch:
+  - workflow_dispatch
+  - push
     
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -9,7 +10,6 @@ env:
 
 jobs:
     build:
-      runs-on: ${{matrix.os}}
       strategy:
           fail-fast: false
           matrix:
@@ -21,6 +21,7 @@ jobs:
                   packaging: deb
                 - os: windows
                   packaging: appimage
+      runs-on: ${{matrix.os}}
       steps:
         - uses: actions/checkout@v4
           with:
